Closed Bug 1197664 Opened 9 years ago Closed 9 years ago

Dropped frame count is occasionally insane or decoded frames counter invalid

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox41 --- fixed
firefox42 --- fixed
firefox43 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file, 1 obsolete file)

This is likely the cause for bug 1178596

I noticed that when playing a video where a resolution change occurs, the number of decoded frames was reset to 0.

It shouldn't.
Attachment #8651587 - Flags: review?(cpearce)
Attachment #8651587 - Flags: review?(cpearce) → review?(ajones)
Attachment #8651587 - Flags: review?(ajones) → review+
Assignee: nobody → jyavenard
Comment on attachment 8651587 [details] [diff] [review]
Report the total number of decoded frames.

rebased
Attachment #8651587 - Attachment is obsolete: true
Keywords: checkin-needed
Keywords: checkin-needed
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/5b179e366ecf
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Comment on attachment 8651756 [details] [diff] [review]
Report the total number of decoded frames. r=kentuckyfriedtakahe

Approval Request Comment
[Feature/regressing bug #]: 1171379
[User impact if declined]: YouTube may serve lower quality video than possible.
[Describe test coverage new/current, TreeHerder]: central, local test
[Risks and why]: Very low, this is about the amount of frames dropped returned. 
[String/UUID change made/needed]: None
Attachment #8651756 - Flags: approval-mozilla-beta?
Attachment #8651756 - Flags: approval-mozilla-aurora?
Comment on attachment 8651756 [details] [diff] [review]
Report the total number of decoded frames. r=kentuckyfriedtakahe

Better quality with YB, taking it!
Attachment #8651756 - Flags: approval-mozilla-beta?
Attachment #8651756 - Flags: approval-mozilla-beta+
Attachment #8651756 - Flags: approval-mozilla-aurora?
Attachment #8651756 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: