Bug 1197664 - Report the total number of decoded frames. r=kentuckyfriedtakahe, a=sledru